--- a/OzonAlerts/OzonAlerts.css
+++ b/OzonAlerts/OzonAlerts.css
@@ -6,7 +6,7 @@
   padding: 10px;
   padding-left: 25px;
   padding-right: 25px;
-  border-radius: 4px;
+  border-radius: 2px;
   font-size: 20px;
   text-align: center;
   color: white;
@@ -14,23 +14,43 @@
   background-size: cover;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "DM";
+  font-family: "Roboto";
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-  animation: fadeIn ease 1s;
+  animation: fadeIn ease 0.5s;
 }
 
 #OzonTable {
   width: 100%;
+  margin: auto; 
+  padding: 10px;
 }
-#OzonTable button {
-  margin-right: 30px; 
-  margin-left: 30px; 
+#OzonTable td {
+  padding: 10px;
+}
+#OzonTable button { 
+  border-radius: 2px;
+  border: none; 
+  padding: 5px;
+  padding-left: 10px; 
+  padding-right: 10px;
+  font-family: "Roboto";
 }
 
+#OzonTable button:hover {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+#OzonBtnConfirm {
+  margin-right: 30px; 
+}
+
+#OzonBtnCancel {
+  margin-left: 30px;
+}
 
 @font-face {
-  font-family: "DM";
-  src: url(fonts/DMSans-Regular.ttf);
+  font-family: "Roboto";
+  src: url(fonts/Roboto-Light.ttf);
 }
 
 @keyframes fadeIn {
@@ -50,7 +70,6 @@
 
   100% {
     opacity: 0;
-
   }
 }
 
