--- a/OzoneAlerts/OzoneAlerts.css
+++ b/OzoneAlerts/OzoneAlerts.css
@@ -6,7 +6,7 @@
   padding: 10px;
   padding-left: 25px;
   padding-right: 25px;
-  border-radius: 2px;
+  border-radius: 3px;
   font-size: 20px;
   text-align: center;
   color: white;
@@ -15,7 +15,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Roboto";
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   animation: fadeIn ease 0.5s;
   z-index: 100;
 }
@@ -28,22 +28,33 @@
 #OzoneTable button { 
   border-radius: 2px;
   border: none; 
-  padding: 5px;
-  padding-left: 10px; 
-  padding-right: 10px;
-  font-family: "Roboto";
-}
-
-#OzoneTable button:hover {
-  background-color: rgba(255, 255, 255, 0.7);
+  padding: 8px;
+  padding-left: 15px; 
+  padding-right: 15px;
+  outline: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
 }
 
 #OzoneBtnConfirm {
   margin-right: 30px; 
+  transition: 0.3s;
+}
+
+#OzoneBtnConfirm:hover {
+  background-color: rgba(37, 155, 53, 0.75); 
+  color: white; 
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 #OzoneBtnCancel {
   margin-left: 30px;
+  transition: 0.3s;
+}
+
+#OzoneBtnCancel:hover {
+  background-color: rgba(155, 37, 37, 0.75);
+  color: white; 
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 @font-face {
