--- a/OzoneAlerts/OzoneAlerts.css
+++ b/OzoneAlerts/OzoneAlerts.css
@@ -10,13 +10,13 @@
   font-size: 20px;
   text-align: center;
   color: white;
-  background-image: url(ugh3.jpg);
+  background-color: rgba(0, 0, 0, 0.75);
   background-size: cover;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Roboto";
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-  animation: fadeIn ease 0.5s;
+  animation: ozfadeIn ease 0.5s;
   z-index: 100;
 }
 
@@ -62,7 +62,7 @@
   src: url(fonts/Roboto-Light.ttf);
 }
 
-@keyframes fadeIn {
+@keyframes ozfadeIn {
   0% {
     opacity: 0;
   }
@@ -72,7 +72,7 @@
   }
 }
 
-@keyframes fadeOut {
+@keyframes ozfadeOut {
   0% {
     opacity: 1;
   }
@@ -82,7 +82,7 @@
   }
 }
 
-@keyframes pulse {
+@keyframes ozpulse {
   0% {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
   }
