--- a/OzoneAlerts/OzoneAlerts.css
+++ b/OzoneAlerts/OzoneAlerts.css
@@ -1,3 +1,4 @@
+/* Styles the main div element  */
 #Ozone {
   position: absolute;
   width: 310px;
@@ -20,10 +21,12 @@
   z-index: 100;
 }
 
+/* Styles the table used within the main div  */
 #OzoneTable {
   width: 100%;
   margin: auto; 
 }
+
 
 #OzoneTable button { 
   border-radius: 2px;
@@ -35,6 +38,7 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
 }
 
+/* Styles the buttons used for the dialog type */
 #OzoneBtnConfirm {
   margin-right: 30px; 
   transition: 0.3s;
@@ -62,6 +66,7 @@
   src: url(fonts/Roboto-Light.ttf);
 }
 
+/* Specifies animations used upon initial appearance, persisting and deletion of alert */
 @keyframes ozfadeIn {
   0% {
     opacity: 0;
