--- a/OzoneAlerts/OzoneAlerts.css
+++ b/OzoneAlerts/OzoneAlerts.css
@@ -3,7 +3,7 @@
   position: absolute;
   width: 310px;
   height: auto;
-  margin: 0.8%;
+  margin: 20px;
   padding: 10px;
   padding-left: 25px;
   padding-right: 25px;
@@ -12,13 +12,12 @@
   text-align: center;
   color: white;
   background-color: rgba(0, 0, 0, 0.75);
-  background-size: cover;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Roboto";
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   animation: ozfadeIn ease 0.5s;
-  z-index: 100;
+  z-index: 999;
 }
 
 /* Styles the table used within the main div  */
