--- a/OzoneAlerts/OzoneAlerts.css
+++ b/OzoneAlerts/OzoneAlerts.css
@@ -1,6 +1,10 @@
 /* Styles the main div element  */
 .Ozone {
   position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   min-width: 310px;
   max-width: 20%;
   height: auto;
@@ -19,10 +23,24 @@
   z-index: 999999;
 }
 
-/* Styles the table used within the main div  */
-.OzoneTable {
-  width: 100%;
-  margin: auto; 
+/* Styles the div container for the icon */
+.OzoneIcon {
+  position: absolute;
+  left: 25px;
+}
+
+/* Styles the div container for the message */
+.OzoneMessage {
+  height: auto;
+  width: 80%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  overflow-wrap: break-word;
+}
+
+/* Styles the div container for the controls */
+.OzoneControls {
+  margin-top: 10px;
 }
 
 /* Styles the buttons used for the dialog type */
