--- a/OzoneAlerts.css
+++ b/OzoneAlerts.css
@@ -18,7 +18,7 @@
   background-color: rgba(0, 0, 0, 0.75);
   font-family: "Roboto";
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-  animation: ozfadeIn ease 0.5s;
+  animation: ozFadeIn ease 0.25s;
   z-index: 999999;
 }
 
@@ -86,7 +86,7 @@
 }
 
 /* Specifies animations used upon initial appearance, persisting and deletion of alert */
-@keyframes ozfadeIn {
+@keyframes ozFadeIn {
   0% {
     opacity: 0;
   }
@@ -96,7 +96,7 @@
   }
 }
 
-@keyframes ozfadeOut {
+@keyframes ozFadeOut {
   0% {
     opacity: 1;
   }
@@ -106,7 +106,7 @@
   }
 }
 
-@keyframes ozpulse {
+@keyframes ozPulse {
   0% {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
   }
