--- a/OzoneAlerts.css
+++ b/OzoneAlerts.css
@@ -42,7 +42,7 @@
 }
 
 /* Styles the buttons used for the dialog type */
-#OzoneBtnConfirm {
+.OzoneBtnConfirm {
   margin-right: 30px; 
   transition: 0.3s;
   border-radius: 2px;
@@ -55,13 +55,13 @@
   cursor: pointer;
 }
 
-#OzoneBtnConfirm:hover {
+.OzoneBtnConfirm:hover {
   background-color: rgba(37, 155, 53, 0.75); 
   color: white; 
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-#OzoneBtnCancel {
+.OzoneBtnCancel {
   margin-left: 30px;
   transition: 0.3s;
   border-radius: 2px;
@@ -74,7 +74,7 @@
   cursor: pointer;
 }
 
-#OzoneBtnCancel:hover {
+.OzoneBtnCancel:hover {
   background-color: rgba(155, 37, 37, 0.75);
   color: white; 
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
